# parlant

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CICLO_COMPLETO_PARLANT.md  CLAUDE.md  CONTRIBUTING.md  Justfile  PARLANT_PROJECT_EXPLANATION.md  README.md  ROADMAP.md  analyze_data.py  analyze_token_generation_times.py  commit_message.txt  dco_remediation.txt  exit  flake.nix  generate_disk_report.sh  llms.txt  mypy.ini  oci.md  parlant.toml  parlant_openrouter.toml  pyproject.toml  pytest.ini  pytest_stochastics.json  tools_config.json  tools_config_backup.json  tools_config_v2.json
.cursor/rules/: importrules.mdc
.github/workflows/: ci-test.yml  test_docker_publish.yml
Supplementary Materials/Prompts/: ARQ Guideline Proposer Example Prompt.txt  ARQ Message Generator Example Prompt.txt  ARQ Tool Caller Example Prompt.txt  CoT Guideline Proposer Example Prompt.txt  CoT Message Generator Example Prompt.txt  CoT Tool Caller Example Prompt.txt  Control Guideline Proposer Example Prompt.txt  Control Message Generator Example Prompt.txt  Control Tool Caller Example Prompt.txt
commands/: bash_script.sh
docs/: elasticsearch_configuration.md  elasticsearch_document_database.md
docs/adapters/nlp/: gemini.md  oci.md  openai.md  openrouter.md  vertex.md
docs/adapters/persistence/: elasticsearch.md  pocketbase.md  postgresql.md  snowflake.md  supabase.md
docs/adapters/vector_db/: elasticsearch.md  pgvector.md  pinecone.md  qdrant.md  weaviate.md
docs/concepts/: sessions.md
docs/concepts/customization/: journeys.md
docs/infra-notes/: callable.md  engine.md  lagom-container.md  server.md
docs/quickstart/: installation.md
examples/: 0_tools.py  OPENROUTER_README.md  campus_qa.py  dspy_example.py  dspy_integration.py  dspy_integration_example.py  elasticsearch_example.py  engine_integration.py  env_loader.py  evaluation_throttler_demo.py  healthcare.py  main.py  oci_smoke_test.py  openrouter_example.py  optimize_guidelines.py  parlant_openrouter.toml  run_postgres_server.py  travel_voice_agent.py
scripts/: cleanup_elasticsearch.py  install_packages.py  publish.py  utils.py  version.py
server/: .gitignore  pyproject.toml
server/tests/: __init__.py  conftest.py  test_loading_configuration.py  test_mc.py  tool_utilities.py
server/tests/api/: test_agent_config.py  test_agents.py  test_rag.py  test_sessions.py  test_threads.py
server/tests/core/: test_guideline_connections.py
server/tests/e2e/: test_utilities.py
src/parlant/: sdk.py
src/parlant/api/: agents.py  app.py  authorization.py  canned_responses.py  capabilities.py  common.py  context_variables.py  customers.py  evaluations.py  glossary.py  guideline_matcher_test_api.py  guidelines.py  imports.py  index.py  journeys.py  playbooks.py  relationships.py  services.py  sessions.py  sessions_refactored_example.py  tags.py  tool_call_inference_test_api.py
src/parlant/app_modules/: agents.py  canned_responses.py  capabilities.py  context_variables.py  customers.py  evaluations.py  glossary.py  guidelines.py  journeys.py  relationships.py  services.py  sessions.py  tags.py
src/parlant/core/: agents.py  application.py  async_utils.py  background_tasks.py  cancellations.py  (+26 more)
tests/: conftest.py  test_utilities.py  tool_utilities.py
tests/api/: test_agent_playbook.py  test_agents.py  test_app.py  test_app_wrapper.py  test_authorization.py  test_canned_responses.py  test_capabilities.py  test_context_variables.py  test_customers.py  test_evaluations.py  test_glossary.py  test_guideline_matcher_api.py  test_guidelines.py  test_index.py  test_journeys.py  test_playbooks.py  test_relationships.py  test_services.py  test_sessions.py  test_tool_call_inference_api.py  test_websocket_logger.py
tests/core/: conftest.py  test_agents.py  test_cancellation_suppression_latch.py  test_context_variables.py  test_playbooks.py
tests/e2e/: test_client_cli_via_api.py  test_server_cli.py  test_utilities.py
tests/sdk/: test_agents.py  test_current_entities.py  test_customers.py  test_dynamic_composition_mode.py  test_glossary.py  test_guidelines.py  test_journeys.py  test_labels.py  test_retrievers.py  test_sdk_validation.py  test_server.py  test_sub_journeys.py  test_tools.py  utils.py
tests/test_dspy_integration/: __init__.py  test_composers.py  test_engine_integration.py  test_guideline_proposer.py
(+380 files in other folders)
